hw01/01_cssgrid/layout.css
* {
    box-sizing: border-box;
    /* color: white; */
    font-family: Arial;
    font-size: 1.1em;
}

body {
    display: grid;
    overflow: hidden;
    margin: 0px;

    grid-template-columns: 250px auto;
    grid-template-rows: calc(100vh - 100px) 100px;
    grid-template-areas:
        "left primary"
        "bottom bottom";
    height: 100vh;
    background-color: black;
    color: white;
}

aside,
footer,
header,
nav,
#featured-content {
    display: flex;
    align-items: center;
    justify-content: center;
    border: dotted 1px white;
    padding: 10px;
}

aside {
    grid-area: left;
    /* background-color: lightblue; */
}

main {
    grid-area: primary;
    /* background-color: pink; */
    overflow-y: scroll;
    z-index: 1000;
}

footer {
    grid-area: bottom;
    /* background-color: gray; */
}

header {
    height: 70px;
    background-color: black;
    position: fixed;
    width: calc(100vw - 250px);
}

nav {
    margin-top: 70px;
    height: 100px;
    /* background-color: lightpink; */
}

#featured-content {
    min-height: 100vh;
    align-items: flex-start;
    /* justify-content: center; */
    /* background-color: teal; */
}

@media screen and (max-width: 800px) {
    body {
        grid-template-columns: auto;
        grid-template-areas: 
        "primary"
        "bottom";
    }
    aside {
        display: none;
    }
    header {
        width: 100vw;
        background-color: teal;
    }
}

